added nose arguments

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 Werkzeug==2.1.2
 
 # Runtime dependencies
-Flask==2.1.2
-Flask-SQLAlchemy==2.5.1
+Flask
+Flask-SQLAlchemy
 psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 
